--- a/todo.txt
+++ b/todo.txt
@@ -2,9 +2,17 @@
 -Fonction qui donne les paramètres en fonction des caractéristiques du virus
 -Mise en place de la propagation dans le jeu
 -Débloquer les symptomes
+-Enregistrer modifications
+-Site web ?
+-Rediger 
+-Onglet pour acceder aux graphes
+-Relier fonction propagation spatiale
+-Historique actions
+-Mettre à jour l'affichage: pourcentage + nombre
+-Plot les bonnes valeurs dans le graphe 
 
 FAIT
--Mettre à jour l'affichage: pourcentage + nombre
+
 -Revoir la mort 
 -Intéraction entre les villes
 -Affichage du graphique à la fin du jeu + limiter le nombre de tours
