--- a/todo.txt
+++ b/todo.txt
@@ -6,7 +6,10 @@
 -- ajuster les pas de temps entre prop spatial eet prop temporelle
 -- ajouter evenements aleatoires (genre un pour commencer)
 - - caracteristiques differentes (param differentes) pour chaques villes -> ajouter param dans classe ville (on pourra)
--- enlever les boutons propagation et duree dinfection
+-- remetre un bouton mutation, avec des surprises ? genre ca augmente la resistance (mais coute cher) 
+quand les gens guerissent trop vite, et parfois ca fait un truc aleatoire pour ou contre nous
+
+
 
 
 FAIT
@@ -19,3 +22,4 @@ FAIT
 -Mise en place de la propagation dans le jeu
 -Relier fonction propagation spatiale
 -Plot les bonnes valeurs dans le graphe
+-- enlever les boutons propagation et duree dinfection
