--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,11 @@
 -- Débloquer les symptomes
--Enregistrer modifications
--Historique actions
+- Historique actions
 - - caracteristiques differentes (param differentes) pour chaques villes -> ajouter param dans classe ville (on pourra)
 -- remetre un bouton mutation, avec des surprises ? genre ca augmente la resistance (mais coute cher) 
 quand les gens guerissent trop vite, et parfois ca fait un truc aleatoire pour ou contre nous
 
 FAIT
+-Automatisation update plot
 -Restructurer la classe virus+symptômes
 -Intéraction entre les villes
 -Affichage du graphique à la fin du jeu + limiter le nombre de tours
