--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,9 @@
--- Débloquer les symptomes 
-- Historique actions (G)
-- - caracteristiques differentes (param differentes) pour chaques villes -> ajouter param dans classe ville (on pourra) (J)
+-- Débloquer les symptomes
+- Historique actions
+-- caracteristiques differentes (param differentes) pour chaques villes -> ajouter param dans classe ville (on pourra)
 -- remetre un bouton mutation, avec des surprises ? genre ca augmente la resistance (mais coute cher) 
 quand les gens guerissent trop vite, et parfois ca fait un truc aleatoire pour ou contre nous
-- commencer graphes villes que quand elles sont ocntaminées ? (J)
+- commencer graphes villes que quand elles sont contaminées ?
 
 FAIT
 -Automatisation update plot
